<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aura Guardian App</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_map">Map</string>
    <string name="title_graphs">Graphs</string>
    <string name="title_settings">Settings</string>
    <string name="title_geofence_setup">Geofence Setup</string>

    <string name="login_button_text">Log In</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="welcome_message">Bienvenido a Aura Guardian</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_tracking_location">Tracking child\'s location...</string>
    <string name="notification_monitoring_data">Monitoring child\'s data...</string>

    <string name="ai_analysis_placeholder_initial">Aquí aparecerá el análisis de datos de Gemini AI. Selecciona un niño y pulsa "Analizar".</string>
    <string name="ai_analysis_placeholder_analyzing">Analizando datos con Gemini AI, por favor espera...</string>
    <string name="ai_analysis_placeholder_no_result">No se pudo generar el análisis de IA o no hay datos disponibles.</string>


    <string name="geofence_not_available">Geofence service is not available now. Go to Settings &gt; Location &gt; Mode and set it to High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_request_too_fine">Geofence request too fine. Please check the radius or coordinates.</string>
    <string name="geofence_unknown_error">Unknown error: The Geofence service is not available now.</string>

</resources>