<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment3" android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/calendarFragment" android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/mapFragment" android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/graphsFragment" android:icon="@drawable/ic_graph_black_24dp"
        android:title="@string/title_graphs" />

    <item
        android:id="@+id/settingsFragment" android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>